# soundwich

./: .clang-format  CMakeLists.txt  LICENCE  LICENSE  README.md
include/: audio_output.hpp  common.hpp  decoder_manager.hpp  player_controller.hpp  playlist_manager.cpp  playlist_manager.hpp
include/audio_output/: IAudioOutput.hpp  audio_output.hpp
src/: main.cpp  playlist_manager.сpp
src/audio_output/: PipeWireCore.cpp  PipeWireOutput.cpp  process.cpp
src/playlist_manager/: PlaylistManager.cpp
